--- a/src/container.scss
+++ b/src/container.scss
@@ -5,46 +5,5 @@ div.container {
 
   @include flexContainer;
 
-  div.header {
-
-    height: 80px;
-    width: 80%;
-
-    border-bottom: 1px solid $colors1;
-    text-align: center;
-    line-height: 80px;
-
-    @include flexHeader;
-
-    div.right {
-
-      div.navbar {
-
-        margin-left : $margin-left;
-
-        span {
-
-          padding-right : $padding-right;
-          color: $colors1;
-
-         }
-
-        a {
-
-          background: white;
-          border: 1px solid blue;
-          text-decoration: none;
-
-          &:hover {
-
-            background: blue;
-            border: 1px solid white;
-            color: $colors2;
-          }
-
-        }
-      }
-    }
-
-  }
+  @import "header";
 }
