--- a/src/header.scss
+++ b/src/header.scss
@@ -1,8 +1,15 @@
 
-
 div.header {
 
-  @include header;
+  height: 80px;
+  width: 80%;
 
-  height: 100px;
+  border-bottom: 1px solid $colors1;
+  text-align: center;
+  line-height: 80px;
+
+  @include flexHeader;
+
+  @import "right";
+
 }
