--- a/src/const.scss
+++ b/src/const.scss
@@ -10,16 +10,24 @@ $margin-left : 50px;
 
 $border-radius: 8px;
 
-@mixin flexContainer {
+@mixin flexColumn {
 
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-@mixin flexHeader {
+@mixin flexRowHeader {
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+@mixin flexRowUnd {
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
