--- a/src/container.scss
+++ b/src/container.scss
@@ -3,8 +3,8 @@ div.container {
   width: 100vw;
   height: 100vh;
 
-  @include flexContainer;
+  @include flexColumn;
 
   @import "header";
-  @import "undersdtand";
+  @import "understand";
 }
