--- a/src/const.scss
+++ b/src/const.scss
@@ -2,10 +2,12 @@ $colors1 : rgb(189, 181, 175);
 $colors2 : white;
 $colors3 : #58402c;
 $colors4 : rgb(126, 141, 185);
+$colors5: blue;
 
 $padding-right : 30px;
 $padding: 10px;
 
+$margin: 15px;
 $margin-left : 50px;
 
 $border-radius: 8px;
