--- a/src/right.scss
+++ b/src/right.scss
@@ -25,7 +25,7 @@ div.right {
 
       &:hover {
 
-        background: blue;
+        background: $colors5;
         border: 1px solid white;
         color: $colors2;
       }
