--- a/src/const.scss
+++ b/src/const.scss
@@ -2,15 +2,20 @@ $colors1 : rgb(189, 181, 175);
 $colors2 : white;
 $colors3 : #58402c;
 $colors4 : rgb(126, 141, 185);
-$colors5: blue;
+$colors5 : blue;
+
+$width80 : 80%;
+$width100 : 100%;
 
 $padding-right : 30px;
 $padding: 10px;
+$paddingU : 50px;
 
 $margin: 15px;
 $margin-left : 50px;
 
 $border-radius: 8px;
+
 
 @mixin flexColumn {
 
