--- a/src/const.scss
+++ b/src/const.scss
@@ -3,6 +3,7 @@ $colors2 : white;
 $colors3 : #58402c;
 $colors4 : rgb(126, 141, 185);
 $colors5 : blue;
+$colors6 : rgb(255, 231, 210);
 
 $width80 : 80%;
 $width100 : 100%;
