--- a/src/const.scss
+++ b/src/const.scss
@@ -13,10 +13,10 @@ $padding: 10px;
 $paddingU : 50px;
 
 $margin: 15px;
+$margin_auto : auto;
 $margin-left : 50px;
 
 $border-radius: 8px;
-
 
 @mixin flexColumn {
 
