--- a/src/const.scss
+++ b/src/const.scss
@@ -7,7 +7,7 @@ $colors6 : rgb(255, 231, 210);
 
 $width80 : 80%;
 $width100 : 100%;
-$height : 70%;
+$height70 : 70%;
 
 $padding-right : 30px;
 $padding: 10px;
