--- a/src/traditional.scss
+++ b/src/traditional.scss
@@ -32,6 +32,7 @@ div.traditional {
       @include  flexRowUnd;
       height: calc(100% / 7);
       width: $width80;
+      border: 1px solid $colors1;
 
       div {
 
@@ -40,7 +41,7 @@ div.traditional {
           img {
 
               width: $width80;
-              height: $height70;
+              height: 70%;
           }
       }
     }
