--- a/src/container.scss
+++ b/src/container.scss
@@ -7,5 +7,6 @@ div.container {
 
   @import "header";
   @import "understand";
-  @import "traditional"
+  @import "traditional";
+  @import "feedback";
 }
