--- a/src/const.scss
+++ b/src/const.scss
@@ -7,7 +7,9 @@ $colors6 : rgb(255, 231, 210);
 
 $width80 : 80%;
 $width100 : 100%;
+$width50 : 50%;
 $height70 : 70%;
+$height100 : 100%;
 
 $padding-right : 30px;
 $padding: 10px;
