--- a/src/const.scss
+++ b/src/const.scss
@@ -14,6 +14,7 @@ $height100 : 100%;
 $padding-right : 30px;
 $padding: 10px;
 $paddingU : 50px;
+$paddingF : 150px;
 
 $margin: 15px;
 $margin_auto : auto;
