--- a/src/const.scss
+++ b/src/const.scss
@@ -15,6 +15,7 @@ $padding-right : 30px;
 $padding: 10px;
 $paddingU : 50px;
 $paddingF : 150px;
+$padding-left : 50px;
 
 $margin: 15px;
 $margin_auto : auto;
@@ -37,6 +38,13 @@ $border-radius: 8px;
 }
 
 @mixin flexRowUnd {
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+@mixin flexRowUnd1 {
 
   display: flex;
   flex-direction: row;
