--- a/src/see_Teambit.scss
+++ b/src/see_Teambit.scss
@@ -7,6 +7,9 @@
 
    div.see_Teambit-container {
 
+     width: $width80;
+     height: $height70;
+
      div.buttons {
 
          @include flexRowUnd;
