--- a/src/const.scss
+++ b/src/const.scss
@@ -5,10 +5,11 @@ $colors4 : rgb(126, 141, 185);
 $colors5 : blue;
 $colors6 : rgb(255, 231, 210);
 
-$width80 : 80%;
-$width100 : 100%;
 $width50 : 50%;
-$height70 : 70%;
+$width75 : 75%;
+$width100 : 100%;
+$height : 50%;
+$height75 : 75%;
 $height100 : 100%;
 
 $padding-right : 30px;
