--- a/src/container.scss
+++ b/src/container.scss
@@ -9,6 +9,6 @@ div.container {
   @import "traditional";
   @import "feedback";
   @import "survey";
-  @import "see_Teambit";
+  @import "see";
   @import "footer";
 }
