--- a/src/see.scss
+++ b/src/see.scss
@@ -1,5 +1,5 @@
 
- div.see_Teambit {
+ div.see {
 
    width: $width100;
    background : $colors6;
@@ -7,8 +7,8 @@
 
    div.see_Teambit-container {
 
-     width: $width80;
-     height: $height70;
+     width: $width75;
+     height: $height75;
 
      div.buttons {
 
