--- a/src/header.scss
+++ b/src/header.scss
@@ -1,11 +1,11 @@
 
 div.header {
-  height: 80px;
-  width: $width80;
+  height: $height75;
+  width: $width75;
 
   border-bottom: 1px solid $colors1;
   text-align: center;
-  line-height: 80px;
+  line-height: 75px;
 
   @include flexRowHeader;
 
