--- a/src/see.scss
+++ b/src/see.scss
@@ -3,12 +3,14 @@
 
    width: $width100;
    background : $colors6;
-  
+   margin : $margin_auto;
+
 
    div.see_Teambit-container {
 
      width: $width75;
      height: $height75;
+     @include flexColumn;
 
      div.buttons {
 
