--- a/src/const.scss
+++ b/src/const.scss
@@ -24,6 +24,7 @@ $margin_auto : auto;
 $margin-left : 50px;
 
 $border-radius: 8px;
+$border : 1px solid black;
 
 @mixin flexColumn {
   display: flex;
