--- a/src/const.scss
+++ b/src/const.scss
@@ -4,6 +4,7 @@ $colors3 : #58402c;
 $colors4 : rgb(126, 141, 185);
 $colors5 : blue;
 $colors6 : rgb(255, 231, 210);
+$colors7 : grey;
 
 $width50 : 50%;
 $width75 : 75%;
