--- a/src/const.scss
+++ b/src/const.scss
@@ -14,10 +14,10 @@ $height75 : 75%;
 $height100 : 100%;
 
 $padding-right : 30px;
-$padding-rightFoot : 150px;
+$padding-rightFoot : 120px;
 $padding: 10px;
 $paddingU : 50px;
-$paddingF : 150px;
+$paddingF : 70px 70px 35px;
 $padding-left : 50px;
 
 $margin: 15px;
