--- a/src/understand.scss
+++ b/src/understand.scss
@@ -35,7 +35,7 @@ div.understand {
      }
 
      span {
-       margin-bottom: $margin;
+       margin-top: $marginU;
        color: $colors3;
      }
   }
