--- a/src/see.scss
+++ b/src/see.scss
@@ -6,29 +6,47 @@
    margin : $margin_auto;
 
 
-   div.see_Teambit-container {
+     div.see_Teambit-container {
 
-     width: $width75;
-     @include flexColumn;
-     margin: $margin_auto;
+       width: $width75;
+       @include flexColumn;
+       margin: $margin_auto;
+       padding:$paddingF;
 
-     blockquote {
+       h5 {
+       margin-bottom: $marginU;
+       }
 
-       background: $colors2;
-       border: $border;
+       blockquote {
+
+         height: 90%;
+         width: $width50;
+         margin: $margin_auto;
+         background: $colors2;
+         border: $border;
+         border-radius: $border-radius;
+         margin-bottom: $marginU;
+        }
+
+       div.buttons {
+
+           @include flexRowUnd;
+
+           #Google {
+            @include button;
+           }
+
+           i {
+             color: grey;
+           }
+
+           #Slack {
+            @include button;
+           }
+       }
+
+       span {
+         margin-top: $marginU;
+       }
      }
-
-     div.buttons {
-
-         @include flexRowUnd;
-
-         #Google {
-          @include button;
-         }
-
-         #Slack {
-          @include button;
-         }
-     }
-   }
 }
