--- a/src/see.scss
+++ b/src/see.scss
@@ -16,6 +16,9 @@
 
        h5 {
        margin-bottom: $marginU;
+       font-size: $font-size40;
+       color: $colors3;
+       padding: $padding;
        }
 
        blockquote {
