--- a/src/survey.scss
+++ b/src/survey.scss
@@ -9,11 +9,11 @@ div.survey {
 
       width: $width75;
 
-      div.surveys-left {
+      div.survey-left {
           width: $width50;
         }
 
-      div.surveys-right {
+      div.survey-right {
 
           width: $width50;
 
@@ -28,8 +28,6 @@ div.survey {
                height: $height100;
             }
           }
-
-
         }
    }
 }
