--- a/src/const.scss
+++ b/src/const.scss
@@ -30,6 +30,8 @@ $margin-left : 50px;
 $border-radius: 8px;
 $border : 1px solid black;
 
+$font-size40: 40px;
+
 @mixin flexColumn {
   display: flex;
   flex-direction: column;
