--- a/src/const.scss
+++ b/src/const.scss
@@ -13,6 +13,7 @@ $width100 : 100%;
 $height : 50%;
 $height75 : 75%;
 $height100 : 100%;
+$heightImg: 405px;
 
 $padding-right : 30px;
 $padding-rightFoot : 120px;
