--- a/src/footer.scss
+++ b/src/footer.scss
@@ -23,11 +23,14 @@
         @include flexFooter;
          div.link-container {
 
+             margin-right: $marginU;
+             width: $widthPerc;
 
            ul {
-               list-style: none;
+
+               @include footerLink;
              li {
-               list-style: none;
+
              }
            }
          }
