--- a/src/const.scss
+++ b/src/const.scss
@@ -15,6 +15,7 @@ $height : 50%;
 $height75 : 75%;
 $height100 : 100%;
 $heightImg: 405px;
+$heightPerc: calc(100% / 3);
 
 $padding-right : 30px;
 $padding-rightFoot : 120px;
