--- a/src/feedback.scss
+++ b/src/feedback.scss
@@ -14,7 +14,7 @@ div.feedback {
 
       width: $width50;
       height: $height75;
-      margin-top: 50px;
+      margin-top: $marginU;
 
       img {
         width: $width100;
