--- a/src/const.scss
+++ b/src/const.scss
@@ -16,6 +16,7 @@ $height75 : 75%;
 $height100 : 100%;
 $heightImg: 405px;
 $heightPerc: calc(100% / 3);
+$heightFeed : 200px;
 
 $padding-right : 30px;
 $padding-rightFoot : 120px;
@@ -29,6 +30,7 @@ $marginB: 30px;
 $marginU: 50px;
 $margin_auto : auto;
 $margin-left : 50px;
+$marginMax: 150px; 
 
 $border-radius: 8px;
 $border : 1px solid black;
