--- a/src/const.scss
+++ b/src/const.scss
@@ -28,9 +28,10 @@ $padding-left : 50px;
 $margin: 15px;
 $marginB: 30px;
 $marginU: 50px;
+$margin90: 90px;
 $margin_auto : auto;
 $margin-left : 50px;
-$marginMax: 150px; 
+$marginMax: 150px;
 
 $border-radius: 8px;
 $border : 1px solid black;
