--- a/src/understand.scss
+++ b/src/understand.scss
@@ -3,7 +3,7 @@ div.understand {
 
     @include flexRowUndU;
     width: $width75;
-    margin: $marginU;
+    margin: $margin90;
 
   div.understand-left {
 
