--- a/src/feedback.scss
+++ b/src/feedback.scss
@@ -24,7 +24,7 @@ div.feedback {
     div.feedback-right {
 
       width: $width50;
-      height: $heightFeed;
+      height: 200px;
       margin-bottom: $marginMax;
 
       div.feed-image img {
