--- a/src/feedback.scss
+++ b/src/feedback.scss
@@ -30,7 +30,7 @@ div.feedback {
       div.feed-image img {
         width: $width75;
         height: $height100;
-        padding: $paddingF
+        padding: $paddingF;
       }
     }
   }
