--- a/src/const.scss
+++ b/src/const.scss
@@ -22,6 +22,7 @@ $padding-rightFoot : 120px;
 $padding: 10px;
 $paddingU : 50px;
 $paddingF : 125px 180px 35px;
+$paddingF : 125px 180px 35px;
 $padding-left : 50px;
 
 $margin: 15px;
